Complete Midnight Network Integration
 REAL MIDNIGHT NETWORK CONNECTIVITY:
- Added official Midnight JS SDKs to frontend and backend
- Implemented MidnightNetworkService with real proof generation
- Updated WalletProvider to use Midnight wallet connection
- Created MidnightClient for frontend blockchain interaction

 ENHANCED JOBBOARD.COMPACT CONTRACT:
- Complete smart contract with ZK proof verification
- Job posting, application submission, and status management
- Privacy-preserving analytics and nullifier tracking
- Anti-Sybil protection with proper nullifier handling

 REAL ZK CIRCUIT INTEGRATION:
- Updated circuit build scripts for production compilation
- snarkjs integration for actual proof generation/verification
- Proper trusted setup ceremony scripts
- Circuit compilation and verification key generation

 PRODUCTION-READY FEATURES:
- Real blockchain transaction submission
- On-chain proof verification
- Network status monitoring and health checks
- Fallback modes for development/testing

 TECHNICAL IMPROVEMENTS:
- Enhanced error handling with graceful fallbacks
- Proper TypeScript types for Midnight APIs
- Comprehensive logging and debugging
- Circuit artifact management and build system

This completes the full Midnight Network integration!

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "app",
     "backend", 
     "contracts",
+    "circuits",
     "mock-issuer"
   ],
   "scripts": {
@@ -16,7 +17,10 @@
     "dev:all": "concurrently \"npm run dev:backend\" \"npm run dev\"",
     "build": "npm run build --workspace=app",
     "build:backend": "npm run build --workspace=backend",
-    "build:all": "npm run build:backend && npm run build",
+    "build:circuits": "npm run build --workspace=circuits",
+    "build:all": "npm run build:circuits && npm run build:backend && npm run build",
+    "compile-circuits": "npm run compile --workspace=circuits",
+    "setup-circuits": "npm run setup --workspace=circuits",
     "test": "npm run test --workspaces",
     "test:contracts": "npm run test --workspace=contracts",
     "test:app": "npm run test --workspace=app",
