--- a/app/package.json
+++ b/app/package.json
@@ -1,60 +1,52 @@
 {
   "name": "@ghosthire/app",
   "version": "1.0.0",
-  "description": "GhostHire React DApp",
-  "private": true,
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "vitest",
-    "test:ui": "vitest --ui",
-    "test:e2e": "playwright test",
-    "test:e2e:ui": "playwright test --ui",
+    "test:e2e": "cypress open",
+    "test:e2e:headless": "cypress run",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "lint:fix": "eslint . --ext ts,tsx --fix",
-    "typecheck": "tsc --noEmit",
-    "clean": "rm -rf dist node_modules/.vite"
+    "lint:fix": "eslint . --ext ts,tsx --fix"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.3.2",
-    "axios": "^1.6.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
-    "date-fns": "^2.30.0",
-    "framer-motion": "^10.16.5",
-    "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.48.2",
+    "react-router-dom": "^6.20.1",
     "react-hot-toast": "^2.4.1",
-    "react-query": "^3.39.3",
-    "react-router-dom": "^6.20.0",
+    "framer-motion": "^10.16.5",
+    "lucide-react": "^0.294.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "tailwind-merge": "^2.0.0",
-    "zod": "^3.22.4",
-    "zustand": "^4.4.7"
+    "@midnight-ntwrk/midnight-js-types": "^0.1.15",
+    "@midnight-ntwrk/ledger": "^0.1.15",
+    "@midnight-ntwrk/wallet-api": "^0.1.15",
+    "@midnight-ntwrk/proof-provider": "^0.1.15",
+    "@midnight-ntwrk/compact-runtime": "^0.1.15",
+    "snarkjs": "^0.7.3",
+    "circomlib": "^2.0.5",
+    "axios": "^1.6.2"
   },
   "devDependencies": {
-    "@playwright/test": "^1.39.0",
-    "@testing-library/jest-dom": "^6.1.4",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^14.5.1",
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
-    "@typescript-eslint/eslint-plugin": "^6.10.0",
-    "@typescript-eslint/parser": "^6.10.0",
-    "@vitejs/plugin-react": "^4.1.1",
-    "@vitest/ui": "^3.2.4",
-    "autoprefixer": "^10.4.16",
-    "eslint": "^8.53.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.4",
-    "jsdom": "^22.1.0",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5",
+    "@types/react": "^18.2.43",
+    "@types/react-dom": "^18.2.17",
+    "@vitejs/plugin-react": "^4.2.1",
     "typescript": "^5.2.2",
-    "vite": "^7.1.3",
-    "vitest": "^3.2.4"
+    "vite": "^5.0.8",
+    "tailwindcss": "^3.3.6",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "eslint": "^8.55.0",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "vitest": "^1.0.4",
+    "cypress": "^13.6.1",
+    "@types/node": "^20.10.5"
   }
 }
