--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ghosthire/backend",
   "version": "1.0.0",
-  "description": "GhostHire Backend API - Privacy-preserving job board backend",
+  "description": "GhostHire Backend API - Privacy-preserving job board backend with Midnight Network integration",
   "main": "dist/index.js",
   "scripts": {
     "dev": "tsx watch src/index.ts",
@@ -12,7 +12,9 @@
     "db:migrate": "prisma migrate dev",
     "db:studio": "prisma studio",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "compile-circuits": "cd ../circuits && npm run compile",
+    "setup-circuits": "cd ../circuits && npm run setup"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -28,7 +30,15 @@
     "@prisma/client": "^5.7.1",
     "dotenv": "^16.3.1",
     "express-rate-limit": "^7.1.5",
-    "express-validator": "^7.0.1"
+    "express-validator": "^7.0.1",
+    "@midnight-ntwrk/midnight-js-types": "^0.1.15",
+    "@midnight-ntwrk/ledger": "^0.1.15",
+    "@midnight-ntwrk/wallet-api": "^0.1.15",
+    "@midnight-ntwrk/proof-provider": "^0.1.15",
+    "@midnight-ntwrk/compact-runtime": "^0.1.15",
+    "snarkjs": "^0.7.3",
+    "circomlib": "^2.0.5",
+    "axios": "^1.6.2"
   },
   "devDependencies": {
     "@types/node": "^20.10.5",
@@ -47,7 +57,7 @@
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1"
   },
-  "keywords": ["privacy", "zero-knowledge", "job-board", "blockchain", "midnight"],
+  "keywords": ["privacy", "zero-knowledge", "job-board", "blockchain", "midnight", "circom"],
   "author": "GhostHire Team",
   "license": "Apache-2.0"
 }
