--- a/circuits/package.json
+++ b/circuits/package.json
@@ -3,10 +3,14 @@
   "version": "1.0.0",
   "description": "Zero-Knowledge circuits for GhostHire eligibility verification",
   "scripts": {
-    "compile": "circom eligibility.circom --r1cs --wasm --sym --c",
-    "setup": "snarkjs groth16 setup eligibility.r1cs powersOfTau28_hez_final_15.ptau circuit_0000.zkey",
-    "generate-vkey": "snarkjs zkey export verificationkey circuit_0000.zkey verification_key.json",
-    "clean": "rm -rf *.r1cs *.sym *.wasm *.zkey *.json eligibility_js/",
+    "compile": "circom eligibility.circom --r1cs --wasm --sym --c -o .",
+    "download-ptau": "wget -nc https://hermez.s3-eu-west-1.amazonaws.com/powersOfTau28_hez_final_15.ptau || curl -L -o powersOfTau28_hez_final_15.ptau https://hermez.s3-eu-west-1.amazonaws.com/powersOfTau28_hez_final_15.ptau",
+    "setup": "npm run download-ptau && snarkjs groth16 setup eligibility.r1cs powersOfTau28_hez_final_15.ptau eligibility_0000.zkey",
+    "contribute": "snarkjs zkey contribute eligibility_0000.zkey eligibility_final.zkey --name='GhostHire Contribution' -v",
+    "generate-vkey": "snarkjs zkey export verificationkey eligibility_final.zkey verification_key.json",
+    "verify-circuit": "snarkjs groth16 verify verification_key.json public.json proof.json",
+    "build": "npm run compile && npm run setup && npm run contribute && npm run generate-vkey",
+    "clean": "rm -rf *.r1cs *.sym *.wasm *.zkey *.json eligibility_js/ eligibility_cpp/",
     "test": "node test-circuit.js"
   },
   "dependencies": {
