--- a/backend/env.example
+++ b/backend/env.example
@@ -1,26 +1,58 @@
-# Database
-DATABASE_URL="postgresql://username:password@localhost:5432/ghosthire"
+# Backend Environment Configuration
 
-# JWT
-JWT_SECRET="your-super-secret-jwt-key-here"
-JWT_EXPIRES_IN="7d"
+# Server Configuration
+PORT=3001
+NODE_ENV=development
+CORS_ORIGIN=http://localhost:5173
 
-# Email
-SMTP_HOST="smtp.gmail.com"
-SMTP_PORT="587"
-SMTP_USER="your-email@gmail.com"
-SMTP_PASS="your-app-password"
+# Database Configuration
+DATABASE_URL="file:./dev.db"
 
-# App Configuration
-NODE_ENV="development"
-PORT="3001"
-CORS_ORIGIN="http://localhost:5173"
+# Midnight Network Configuration
+MIDNIGHT_RPC_URL=http://localhost:6565
+MIDNIGHT_NETWORK_ID=midnight-testnet
+MIDNIGHT_PROOF_PROVIDER_URL=http://localhost:6565
+JOB_BOARD_CONTRACT_ADDRESS=
+MIDNIGHT_NETWORK=local
 
-# ZK Proof Configuration
-ZK_PROVING_KEY_PATH="./keys/proving_key.zkey"
-ZK_VERIFICATION_KEY_PATH="./keys/verification_key.json"
-ZK_CIRCUIT_WASM_PATH="./circuits/eligibility.wasm"
+# Authentication
+JWT_SECRET=your-super-secret-jwt-key-for-development-only
+JWT_EXPIRES_IN=7d
+BCRYPT_ROUNDS=12
 
-# Midnight Network (when available)
-MIDNIGHT_RPC_URL="https://rpc.midnight.network"
-MIDNIGHT_PRIVATE_KEY="your-midnight-private-key"
+# Email Configuration (for notifications)
+SMTP_HOST=smtp.ethereal.email
+SMTP_PORT=587
+SMTP_USER=
+SMTP_PASS=
+EMAIL_FROM="noreply@ghosthire.com"
+
+# Rate Limiting
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX_REQUESTS=100
+
+# Logging
+LOG_LEVEL=debug
+ENABLE_REQUEST_LOGGING=true
+
+# ZK Circuit Configuration
+CIRCUIT_PATH=../circuits
+VERIFICATION_KEY_PATH=../circuits/verification_key.json
+PROVING_KEY_PATH=../circuits/proving_key.json
+
+# Mock Data (for development)
+ENABLE_MOCK_PROOFS=true
+ENABLE_MOCK_TRANSACTIONS=true
+
+# WebSocket Configuration
+WS_PORT=3002
+ENABLE_WEBSOCKETS=true
+
+# Security
+HELMET_ENABLED=true
+CSRF_PROTECTION=false
+SESSION_SECRET=your-session-secret-for-development
+
+# Monitoring
+ENABLE_HEALTH_CHECKS=true
+ENABLE_METRICS=false
