--- a/backend/package.json
+++ b/backend/package.json
@@ -17,40 +17,47 @@
     "setup-circuits": "cd ../circuits && npm run setup"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "morgan": "^1.10.0",
-    "zod": "^3.22.4",
-    "uuid": "^9.0.1",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "nodemailer": "^6.9.7",
-    "ws": "^8.14.2",
     "@prisma/client": "^5.7.1",
+    "axios": "^1.6.2",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
-    "axios": "^1.6.2"
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.9.7",
+    "uuid": "^9.0.1",
+    "ws": "^8.14.2",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "^20.10.5",
-    "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17",
-    "@types/morgan": "^1.9.9",
-    "@types/uuid": "^9.0.7",
     "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/nodemailer": "^6.4.14",
-    "@types/ws": "^8.5.10",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.8",
-    "tsx": "^4.6.2",
-    "typescript": "^5.3.3",
-    "prisma": "^5.7.1",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/morgan": "^1.9.9",
+    "@types/node": "^20.10.5",
+    "@types/nodemailer": "^6.4.14",
+    "@types/uuid": "^9.0.7",
+    "@types/ws": "^8.5.10",
     "jest": "^29.7.0",
-    "ts-jest": "^29.1.1"
+    "prisma": "^5.7.1",
+    "ts-jest": "^29.1.1",
+    "tsx": "^4.6.2",
+    "typescript": "^5.3.3"
   },
-  "keywords": ["privacy", "zero-knowledge", "job-board", "blockchain", "midnight", "circom"],
+  "keywords": [
+    "privacy",
+    "zero-knowledge",
+    "job-board",
+    "blockchain",
+    "midnight",
+    "circom"
+  ],
   "author": "GhostHire Team",
   "license": "Apache-2.0"
 }
