--- a/contracts/package.json
+++ b/contracts/package.json
@@ -1,20 +1,25 @@
 {
   "name": "@ghosthire/contracts",
   "version": "1.0.0",
-  "description": "GhostHire Compact contracts",
+  "description": "GhostHire Midnight Network Smart Contracts",
   "private": true,
   "scripts": {
-    "build": "echo 'Mock build - contracts would be compiled here'",
-    "test": "echo 'Mock test - contract tests would run here'",
-    "deploy": "echo 'Mock deploy - contracts would be deployed here'",
-    "deploy:local": "echo 'Mock local deploy - contracts would be deployed locally here'",
+    "build": "compact compile JobBoard.compact --output ./build",
+    "compile": "compact compile JobBoard.compact --output ./build",
+    "deploy": "node scripts/deploy.js",
+    "deploy:testnet": "cross-env NETWORK=testnet node scripts/deploy.js",
+    "deploy:local": "cross-env NETWORK=local node scripts/deploy.js",
+    "test": "jest",
     "clean": "rm -rf dist build",
     "typecheck": "tsc --noEmit"
   },
-  "dependencies": {},
+  "dependencies": {
+  },
   "devDependencies": {
     "@types/node": "^20.10.0",
-    "typescript": "^5.3.0"
+    "typescript": "^5.3.0",
+    "cross-env": "^7.0.3",
+    "jest": "^29.7.0"
   },
   "files": [
     "dist/**/*",
