--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -26,6 +26,7 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src/**/*", "vite.config.ts"],
+  "include": ["src/**/*"],
+  "exclude": ["vite.config.ts", "cypress/**/*", "dist/**/*", "node_modules/**/*"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
