--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,8 @@
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
     "db:studio": "prisma studio",
+    "db:seed": "tsx src/seed.ts",
+    "db:reset": "prisma db push --force-reset && npm run db:seed",
     "test": "jest",
     "test:watch": "jest --watch",
     "compile-circuits": "cd ../circuits && npm run compile",
@@ -18,11 +20,9 @@
   },
   "dependencies": {
     "@midnight-ntwrk/compact-runtime": "^0.8.1",
-    "@midnight-ntwrk/ledger": "^4.0.0",
-    "@midnight-ntwrk/midnight-js-http-client-proof-provider": "^2.0.2",
-    "@midnight-ntwrk/midnight-js-types": "^2.0.2",
     "@prisma/client": "^5.7.1",
-    "axios": "^1.6.2",
+    "@types/axios": "^0.9.36",
+    "axios": "^1.11.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
